# oran_semantic_dci_bit

SemanticRL/: Trainng_SemanticRL.py  data_loader.py  model.py  preprocess_captions.py  read_txt  read_txt.c  train_dict.pkl  utils.py
SemanticRL/Europarl/: dci.txt  dci_v1.txt  dci_v2.txt  english.pkl  english_vocab.pkl
SemanticRL/Evaluation/: Inference_Given_Input.py  Inference_Given_Input_v1.py  Run_Inference_Checkpoints.py  arbName.py  call_function.c  candidate_sentence  candidate_sentence.c  candidate_sentence.py  channel  channel.c  channel.py  decoder  decoder.c  decoder.py  encoder  encoder.c  encoder.py  input_data  input_data.c  input_data.py  main  main.c  normalization_layer  normalization_layer.c  normalization_layer.py  output.txt
SemanticRL/ckpt_AWGN_CE/: decoder_epoch0.pth  decoder_epoch12.pth  decoder_epoch15.pth  decoder_epoch18.pth  decoder_epoch21.pth  decoder_epoch24.pth  decoder_epoch27.pth  decoder_epoch3.pth  decoder_epoch30.pth  decoder_epoch33.pth  decoder_epoch36.pth  decoder_epoch39.pth  decoder_epoch42.pth  decoder_epoch45.pth  decoder_epoch48.pth  decoder_epoch51.pth  decoder_epoch54.pth  decoder_epoch57.pth  decoder_epoch6.pth  decoder_epoch60.pth  decoder_epoch63.pth  decoder_epoch66.pth  decoder_epoch69.pth  (+66 more)
o-du-l2/: CMakeLists.txt  a.out  candidate_sentence  candidate_sentence.c  channel  channel.c  channel.h  chat_client  chat_client.c  chat_server  chat_server.c  decoder  decoder.c  encoder  encoder.c  input_data.c  oran_semantic_dci_bit_phy_stub  oran_semantic_dci_bit_phy_stub.c  phy_stub  phy_stub.c  sc_dci_phy_stub  sc_dci_phy_stub.c  udp_client  udp_client.c  udp_server  udp_server.c
o-du-l2/dci/: CMakeCache.txt  Makefile  channel  cmake_install.cmake  input_data
o-du-l2/eric/: CMakeCache.txt  Makefile  cmake_install.cmake  encoder
o-du-l2/semantic/: channel.h  semantic.h
o-du-l2/src/5gnrmac/: channel.h  lwr_mac_fsm.c  lwr_mac_fsm.h  lwr_mac_handle_phy.c  lwr_mac_phy.c  semantic.h  semanticRL_example1_candidate_sentence.txt  semanticRL_example1_channel_output.txt  semanticRL_example1_decoder_output.txt  semanticRL_example1_encoder_output.txt  semanticRL_example1_input_data.txt  semanticRL_example1_normlize_layer_output.txt  semanticRL_example2_candidate_sentence.txt  semanticRL_example2_channel_output.txt  semanticRL_example2_decoder_output.txt  semanticRL_example2_encoder_output.txt  semanticRL_example2_input_data.txt  semanticRL_example2_normlize_layer_output.txt
o-du-l2/src/cm/: mac_sch_interface.h
o-du-l2/src/intel_fapi/: fapi_interface.h
o-du-l2/src/phy_stub/: phy_stub.h  phy_stub_msg_hdl.c  phy_stub_thread_hdl.c
(+183 files in other folders)
